# commit-sense

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  action.yaml  run-commitsense.sh
.github/ISSUE_TEMPLATE/: bug_report.md
src/: changelog.rs  cli.rs  error.rs  git.rs  lib.rs  main.rs  openai.rs  project.rs  version.rs
tests/: changelog_tests.rs  git_tests.rs  openai_tests.rs  version_tests.rs
